// ==========================================================================
// Code generated and maintained by GoFrame CLI tool. DO NOT EDIT.
// ==========================================================================

syntax = "proto3";

package pbentity;

option go_package = "github.com/yiqiang3344/gf-micro/example/user/api/pbentity";

import "google/protobuf/timestamp.proto";

message User {
    uint32                    Id       = 1   ; // User ID        
    string                    Password = 2   ; // User Password  
    string                    Nickname = 3   ; // User Nickname  
    google.protobuf.Timestamp CreateAt = 4   ; // Created Time   
    google.protobuf.Timestamp UpdateAt = 5   ; // Updated Time   
    google.protobuf.Timestamp DeleteAt = 6   ; // Deleted Time   
}