// protoc --go_out=plugins=grpc:. *.proto

syntax = "proto3";

package user;

option go_package = "github.com/yiqiang3344/gf-micro/example/user/api/user/v1";

import "pbentity/user.proto";

service User{
  rpc Create(CreateReq) returns (CreateRes) {}
  rpc Login(LoginReq) returns (LoginRes) {}
  rpc Logout(LogoutReq) returns (LogoutRes) {}
  rpc GetOne(GetOneReq) returns (GetOneRes) {}
  rpc GetByToken(GetByTokenReq) returns (GetByTokenRes) {}
}

message CreateReq {
  string Nickname = 1; // v: required
  string Password = 2; // v: required
}
message CreateRes {}

message LoginReq {
  string Nickname = 1; // v: required
  string Password = 2; // v: required
}
message LoginRes {
  string Token = 1;
  pbentity.User User = 2;
}

message GetOneReq {
  string Id = 1; // v: required
}
message GetOneRes {
  pbentity.User User = 1;
}

message GetByTokenReq {
  string Token = 1; // v: required
}
message GetByTokenRes {
  pbentity.User User = 1;
}

message LogoutReq {
  string Id = 1; // v: required
}
message LogoutRes {
}